# 11thSPE-CSP

./: .gitignore  README.md  citation.cff  codemeta.json  codemeta.json.license  pyproject.toml  requirements.txt
.github/workflows/: reuse_compliance.yml
analysis/: analysis.py  analyze_distance_matrix.py  analyze_spe11_distance_matrix.py  cluster_analysis.py  compute_spe11_distance.py  datastructure.py  mesh_refinement_study.py  participants.py  safety.py  sensitivity_analysis.py  spe11_data_analysis.py  spe11_io.py  utilities.py  variability_analysis.py  variability_analysis_spe11_distance_matrix.py
description/: changelog CSP.txt  changelog_csp.txt  spe_csp11_description.pdf.license
evaluation/: README.md  add_legend.py  assemble_time_series.py  calculate_all_emds.py  calculate_convection.py  check_format.py  emd.py  generate_grayscale.py  groups_and_colors.py  is_notebook.py  pcolor_from_distances.py  reformat.py  reproduce_figures.sh  round_to_digits.py  spe11a_assemble_performance_time_series.py  spe11a_assemble_time_series.py  spe11a_calculate_co2_distribution.py  spe11a_calculate_convection.py  spe11a_calculate_l2_differences.py  spe11a_calculate_percentiles.py  spe11a_calculate_wasserstein_distances.py  spe11a_compare_boxA.py  spe11a_compare_boxB.py  spe11a_emd_over_time.py  spe11a_facies.npy  spe11a_plot_convection.py  spe11a_visualize_performance_spatial_maps.py  spe11a_visualize_spatial_maps.py  spe11b_assemble_performance_time_series.py  spe11b_assemble_time_series.py  spe11b_calculate_co2_distribution.py  spe11b_calculate_convection.py  spe11b_calculate_l2_differences.py  spe11b_calculate_percentiles.py  spe11b_compare_boxA.py  spe11b_compare_boxB.py  spe11b_compare_convection.py  spe11b_facies.npy  spe11b_fix_reporting_grid.py  spe11b_plot_boxA.py  (+20 more)
geometries/: README.md  extrude_and_rotate.py  make_spe11c_geo.py  make_structured_mesh.py  spe11a.geo  spe11b.geo
input_decks/: README.md
input_decks/GEOS/: README.md
input_decks/GEOS/spe11b/: spe11b_vti_source_00840x00120.xml  spe11b_vti_source_base.xml  spe11b_vti_source_lvl0.xml
input_decks/GEOS/spe11b/include/: dirichlet_boundary_vti.xml  kr.analytics.xml  kr.xml  properties_vti.xml
input_decks/GEOS/spe11b/mesh/: spe11b_00420x00060.vti  spe11b_00840x00120.vti
input_decks/dumux/: README.md
input_decks/eclipse/: README.md  SPE11A_GRID_ECLIPSE_OCT23.GRDECL  SPE11A_PROPS_ECLIPSE_OCT23.GRDECL  SPE11A_SATNUM_ECLIPSE_OCT23.GRDECL
input_decks/opm_flow/: README.md
notebooks/: spe11a_compare_own_result.ipynb  spe11a_data_analysis.ipynb  spe11a_visualization.ipynb  spe11b_compare_own_result.ipynb  spe11b_data_analysis.ipynb  spe11b_data_analysis.ipynb.license  spe11b_visualization.ipynb  spe11b_visualization.ipynb.license  spe11c_compare_own_result.ipynb  spe11c_data_analysis.ipynb  spe11c_visualization.ipynb  start.ipynb
templates/: spe11_questionnaire.xlsx  spe11_questionnaire.xlsx.license
thermodynamics/: README.md  make_component_table.py  make_ecl_tables.m  make_solubility_table.py  writeFluidFlowerPROPS.m  writeFluidFlowerSGOF.m
